# skeleton_follow

./: CMakeLists.txt  README.md  package.xml
include/astra/capi/: astra.h  astra_version.h
include/astra/capi/streams/: body_types.h
include/astra/streams/: Body.hpp  Hand.hpp  Image.hpp
launch/: skeleton_follow.launch
src/: skeleton_follow.cpp
